fixed modal appearance on mobile resolution

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -117,7 +117,7 @@
   .modal__container {
     margin-top: 123px;
     width: 282px;
-    height: 322px;
+    height: 354px;
   }
   .modal__form {
     margin-top: 25px;
