--- a/blocks/newItemModal.css
+++ b/blocks/newItemModal.css
@@ -114,7 +114,7 @@
   .new-item-modal__container {
     margin-top: 123px;
     width: 282px;
-    height: 322px;
+    height: 354px;
   }
   .new-item-modal__form {
     margin-top: 25px;
